# obfusku

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXAMPLE_REPORT.md  FUTURE.md  LANGUAGE_SPEC.md  README.md  SECURITY.md  V1_DESIGN.md  V1_IMPLEMENTATION_REPORT.md
examples/: arrays.obk  closures_v100.obk  conditionals.obk  exceptions.obk  exceptions_v100.obk  fibonacci.obk  first_class_functions.obk  functions.obk  hello_world.obk  input.obk  loop.obk  maps.obk  modules.obk  pattern_matching.obk  showcase_v030.obk  showcase_v100.obk  variables.obk
grimoires/: 00_Obfusku_Overview.md  01_Introduction.md  02_Philosophy_and_Symbol_Primacy.md  03_Hello_World.md  04_Execution_Model_and_VM.md  05_Syntax_and_Symbols.md  06_Values_and_Types.md  07_Functions_and_Calls.md  08_Arrays_and_Maps.md  09_Pattern_Matching.md  10_Exceptions_and_Control_Flow.md  11_Modules_and_Namespaces.md  12_Runtime_and_Memory.md  13_Debugging_and_Error_Messages.md  14_Design_Limits_and_Non_Goals.md  README.md
src/: compiler.rs  main.rs  modules.rs  optimizer.rs  serialize.rs  source_map.rs
src/bytecode/: mod.rs  opcode.rs
src/lexer/: mod.rs  symbols.rs
src/symbols/: meaning.rs  mod.rs
src/vm/: context.rs  mod.rs  runtime.rs  stack.rs
